<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotNextActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:text="@string/login_details"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/txtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:text="@string/mobile_number"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/log_out"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

</RelativeLayout>